[package]
name = "keymapper"
description = "Keyboard remapper utility for Windows."
version = "0.0.1"
authors = [ "Dmitry Golubets <dgolubets@gmail.com>" ]

repository = "https://bitbucket.org/DGolubets/keymapper"
homepage = "https://bitbucket.org/DGolubets/keymapper"
documentation = "https://bitbucket.org/DGolubets/keymapper"
readme = "README"
keywords = ["Key", "Keyboard", "Windows"]
license = "Apache-2.0"

build = "build.rs"
publish = false

[dependencies]
config = "0.1.2"
log = "0.3.5"
log4rs = "0.3.3"
lazy_static = "0.1.15"
winapi = "0.2.5"
user32-sys = "0.1.2"
RustyXML = "0.1.1"
