[package]
name = "keymapper"
description = "Keyboard remapper utility for Windows."
version = "0.0.1"
authors = [ "Dmitry Golubets <dgolubets@gmail.com>" ]
edition = "2018"

repository = "https://bitbucket.org/DGolubets/keymapper"
homepage = "https://bitbucket.org/DGolubets/keymapper"
documentation = "https://bitbucket.org/DGolubets/keymapper"
readme = "README"
keywords = ["Key", "Keyboard", "Windows"]
license = "Apache-2.0"

build = "build.rs"
publish = false

[dependencies]
config = "0.10.1"
log = "0.4.8"
log4rs = { version = "0.9.0", features = ["toml_format"] }
lazy_static = "1.4.0"
winapi = { version = "0.3", features = ["winuser"] }
user32-sys = "0.1.2"
RustyXML = "0.1.1"
