[package]
name = "keymapper"
description = "Keyboard remapper utility for Windows."
version = "0.0.1"
authors = [ "Dmitry Golubets <dgolubets@gmail.com>" ]
edition = "2018"

repository = "https://bitbucket.org/DGolubets/keymapper"
homepage = "https://bitbucket.org/DGolubets/keymapper"
documentation = "https://bitbucket.org/DGolubets/keymapper"
readme = "README"
keywords = ["Key", "Keyboard", "Windows"]
license = "Apache-2.0"

build = "build.rs"
publish = false

[dependencies]
futures = "0.3"
tokio = { version = "1.19.2", features = ["full"] }
config = "0.13.1"
log = "0.4.8"
log4rs = { version = "1.1.1", features = ["toml_format"] }
lazy_static = "1.4.0"
winapi = { version = "0.3", features = ["winuser"] }
user32-sys = "0.2.0"
RustyXML = "0.3.0"
